Build the UBI docker image from tarball
This is mimicking the process in starburst-presto docker image build