@@ -1,12 +1,12 @@
 -server
 -Xmx1G
+-XX:-UseBiasedLocking
 -XX:+UseG1GC
--XX:+UseGCOverheadLimit
+-XX:G1HeapRegionSize=32M
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
+-XX:+UseGCOverheadLimit
 -XX:+ExitOnOutOfMemoryError
--XX:ReservedCodeCacheSize=150M
--DHADOOP_USER_NAME=hive
--Duser.timezone=UTC
+-XX:ReservedCodeCacheSize=256M
 -Djdk.attach.allowAttachSelf=true
--Djdk.nio.maxCachedBufferSize=2000000 
+-Djdk.nio.maxCachedBufferSize=2000000
